--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "an implementation of the monkey language as described in the book \"writing an INTERPRETER in go\" by Thorsten Ball",
   "main": "index.ts",
   "scripts": {
-    "test": "test",
+    "test": "tsc && node ./dist/**.js",
+    "prepublish": "tsc",
     "build": "tsc"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/Mano-lemm/monkey_interpreter_intec#readme",
   "devDependencies": {
+    "ts-md5": "^1.3.1",
     "typescript": "^5.1.6"
   }
 }
